<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.simtechdata</groupId>
    <artifactId>iGet</artifactId>
    <version>2.2.0</version>
    <packaging>jar</packaging>

    <name>iGet</name>
    <description>A program that downloads Instagram Reels and Youtube videos</description>

    <properties>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <native-maven-plugin>0.10.1</native-maven-plugin>
        <maven-compiler-plugin>3.13.0</maven-compiler-plugin>
        <maven-jar-plugin>3.4.1</maven-jar-plugin>
        <maven-assembly-plugin>3.7.1</maven-assembly-plugin>
        <maven-enforcer-plugin>3.4.1</maven-enforcer-plugin>
        <exec-maven-plugin>3.2.0</exec-maven-plugin>
        <versions-maven-plugin>2.16.2</versions-maven-plugin>
        <maven-antrun-plugin>3.1.0</maven-antrun-plugin>
        <imageName>iget</imageName>
        <mainClass>com.simtechdata.Main</mainClass>
        <graalFolder>${project.basedir}/graalvm</graalFolder>
        <system-linker-arg/>
        <system-native-image-arg/>
        <compatibility-arg/>
        <package.type/>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.45.3.0</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.12</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.16.1</version>
        </dependency>
        <dependency>
            <groupId>com.simtechdata</groupId>
            <artifactId>JavaProc</artifactId>
            <version>1.0.0</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>version.properties</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
                <includes>
                    <include>yt-dlp.exe</include>
                    <include>yt-dlp_linux</include>
                    <include>yt-dlp_macos</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <!-- Maven Versions -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>${versions-maven-plugin}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>display-dependency-updates</goal>
                            <goal>display-plugin-updates</goal>
                            <goal>property-updates-report</goal>
                            <goal>dependency-updates-report</goal>
                            <goal>plugin-updates-report</goal>
                            <goal>update-properties</goal>
                            <goal>use-latest-versions</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!--Maven Enforcer Plugin-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven-enforcer-plugin}</version>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.9.6</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- Maven Assembly Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${maven-assembly-plugin}</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>${mainClass}</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <finalName>${name}</finalName>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Maven Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin}</version>
                <configuration>
                    <source>22</source>
                    <target>22</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <!-- Maven Jar Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin}</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>${mainClass}</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>maven_central</id>
            <name>Maven Central</name>
            <url>https://repo.maven.apache.org/maven2/</url>
        </repository>
    </repositories>
    <profiles>
        <!--native profile-->
        <profile>
            <id>native</id>
            <build>
                <plugins>
                    <!-- GraalVM Native Maven Plugin -->
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${native-maven-plugin}</version>
                        <extensions>true</extensions>
                        <configuration>
                            <target>${java.version}</target>
                            <imageName>${imageName}</imageName>
                            <mainClass>${mainClass}</mainClass>
                            <verbose>true</verbose>
                            <buildArgs>
                                <arg>-Djava.awt.headless=true</arg>
                                <arg>--no-fallback</arg>
                                <arg>--verbose</arg>
                                <arg>--enable-preview</arg>
                                <arg>--initialize-at-build-time=org.sqlite.util.ProcessRunner</arg>
                                <arg>-cp
                                    ${user.home}/.m2/repository/org/xerial/sqlite-jdbc/3.45.3.0/sqlite-jdbc-3.45.3.0.jar
                                </arg>
                                <arg>-march=compatibility</arg>
                                <arg>-H:+UnlockExperimentalVMOptions</arg>
                                <arg>-H:+ReportExceptionStackTraces</arg>
                                <arg>-H:JNIConfigurationFiles=${graalFolder}/jni-config.json</arg>
                                <arg>-H:DynamicProxyConfigurationFiles=${graalFolder}/proxy-config.json</arg>
                                <arg>-H:ReflectionConfigurationFiles=${graalFolder}/reflect-config.json</arg>
                                <arg>-H:ResourceConfigurationFiles=${graalFolder}/resource-config.json</arg>
                                <arg>-H:SerializationConfigurationFiles=${graalFolder}/serialization-config.json</arg>
                            </buildArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
